fix docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,11 @@
-FROM eclipse-temurin:24-jdk
+FROM maven:3.9.4-eclipse-temurin-24 AS build
 WORKDIR /app
-COPY . .
-RUN ./mvnw clean package -DskipTests
-CMD ["java", "-jar", "target/*.jar"]
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:24-jre
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
